log/build_2023-08-10_16-36-29/my_station_pkg/stdout_stderr.log
running egg_info
writing ../../build/my_station_pkg/my_station_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/my_station_pkg/my_station_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/my_station_pkg/my_station_pkg.egg-info/entry_points.txt
writing requirements to ../../build/my_station_pkg/my_station_pkg.egg-info/requires.txt
writing top-level names to ../../build/my_station_pkg/my_station_pkg.egg-info/top_level.txt
reading manifest file '../../build/my_station_pkg/my_station_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/my_station_pkg/my_station_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying my_station_pkg/telemetrypoll_node.py -> /home/spiderweb/TestBase/build/my_station_pkg/build/lib/my_station_pkg
running install
running install_lib
copying /home/spiderweb/TestBase/build/my_station_pkg/build/lib/my_station_pkg/telemetrypoll_node.py -> /home/spiderweb/TestBase/install/my_station_pkg/lib/python3.10/site-packages/my_station_pkg
byte-compiling /home/spiderweb/TestBase/install/my_station_pkg/lib/python3.10/site-packages/my_station_pkg/telemetrypoll_node.py to telemetrypoll_node.cpython-310.pyc
  File "/home/spiderweb/TestBase/install/my_station_pkg/lib/python3.10/site-packages/my_station_pkg/telemetrypoll_node.py", line 57
    await main()
    ^^^^^^^^^^^^
SyntaxError: 'await' outside function

running install_data
running install_egg_info
removing '/home/spiderweb/TestBase/install/my_station_pkg/lib/python3.10/site-packages/my_station_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/my_station_pkg/my_station_pkg.egg-info to /home/spiderweb/TestBase/install/my_station_pkg/lib/python3.10/site-packages/my_station_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing drone_comms_node script to /home/spiderweb/TestBase/install/my_station_pkg/lib/my_station_pkg
Installing serialrecv script to /home/spiderweb/TestBase/install/my_station_pkg/lib/my_station_pkg
Installing telemetrypoll_node script to /home/spiderweb/TestBase/install/my_station_pkg/lib/my_station_pkg
writing list of installed files to '/home/spiderweb/TestBase/build/my_station_pkg/install.log'
